fix(cocktailVO) : use Collections.singletonMap instead of map.of to make a map which has a null value(not a null key)