@@ -3,6 +3,7 @@ package com.example.cocktail.vo;
 import com.example.cocktail.dto.CocktailDTO;
 import lombok.Getter;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -23,15 +24,35 @@ public class CocktailVO {
         this.alcoholic = cocktailDTO.getAlcoholic();
         this.glass = cocktailDTO.getGlass();
         this.cocktailDescription = cocktailDTO.getCocktailDescription();
-        this.ingredients.put(1L, Map.of(cocktailDTO.getIngredient1(), cocktailDTO.getMeasure1()));
-        this.ingredients.put(2L, Map.of(cocktailDTO.getIngredient2(), cocktailDTO.getMeasure2()));
-        this.ingredients.put(3L, Map.of(cocktailDTO.getIngredient3(), cocktailDTO.getMeasure3()));
-        this.ingredients.put(4L, Map.of(cocktailDTO.getIngredient4(), cocktailDTO.getMeasure4()));
-        this.ingredients.put(5L, Map.of(cocktailDTO.getIngredient5(), cocktailDTO.getMeasure5()));
-        this.ingredients.put(6L, Map.of(cocktailDTO.getIngredient6(), cocktailDTO.getMeasure6()));
-        this.ingredients.put(7L, Map.of(cocktailDTO.getIngredient7(), cocktailDTO.getMeasure7()));
-        this.ingredients.put(8L, Map.of(cocktailDTO.getIngredient8(), cocktailDTO.getMeasure8()));
-        this.ingredients.put(9L, Map.of(cocktailDTO.getIngredient9(), cocktailDTO.getMeasure9()));
-        this.ingredients.put(10L, Map.of(cocktailDTO.getIngredient10(), cocktailDTO.getMeasure10()));
+        if (cocktailDTO.getIngredient1() != null) {
+            this.ingredients.put(1L, Collections.singletonMap(cocktailDTO.getIngredient1(), cocktailDTO.getMeasure1()));
+        }
+        if (cocktailDTO.getIngredient2() != null) {
+            this.ingredients.put(2L, Collections.singletonMap(cocktailDTO.getIngredient2(), cocktailDTO.getMeasure2()));
+        }
+        if (cocktailDTO.getIngredient3() != null) {
+            this.ingredients.put(3L, Collections.singletonMap(cocktailDTO.getIngredient3(), cocktailDTO.getMeasure3()));
+        }
+        if (cocktailDTO.getIngredient4() != null) {
+            this.ingredients.put(4L, Collections.singletonMap(cocktailDTO.getIngredient4(), cocktailDTO.getMeasure4()));
+        }
+        if (cocktailDTO.getIngredient5() != null) {
+            this.ingredients.put(5L, Collections.singletonMap(cocktailDTO.getIngredient5(), cocktailDTO.getMeasure5()));
+        }
+        if (cocktailDTO.getIngredient6() != null) {
+            this.ingredients.put(6L, Collections.singletonMap(cocktailDTO.getIngredient6(), cocktailDTO.getMeasure6()));
+        }
+        if (cocktailDTO.getIngredient7() != null) {
+            this.ingredients.put(7L, Collections.singletonMap(cocktailDTO.getIngredient7(), cocktailDTO.getMeasure7()));
+        }
+        if (cocktailDTO.getIngredient8() != null) {
+            this.ingredients.put(8L, Collections.singletonMap(cocktailDTO.getIngredient8(), cocktailDTO.getMeasure8()));
+        }
+        if (cocktailDTO.getIngredient9() != null) {
+            this.ingredients.put(9L, Collections.singletonMap(cocktailDTO.getIngredient9(), cocktailDTO.getMeasure9()));
+        }
+        if (cocktailDTO.getIngredient10() != null) {
+            this.ingredients.put(10L, Collections.singletonMap(cocktailDTO.getIngredient10(), cocktailDTO.getMeasure10()));
+        }
     }
 }
